[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Free/Main Characters/Virtual Guy/Idle (32x32).png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Free/Main Characters/Virtual Guy/Jump (32x32).png" type="Texture" id=3]
[ext_resource path="res://Assets/Free/Main Characters/Virtual Guy/Run (32x32).png" type="Texture" id=4]
[ext_resource path="res://Assets/Free/Main Characters/Virtual Guy/Hit (32x32).png" type="Texture" id=5]
[ext_resource path="res://Assets/Free/Main Characters/Virtual Guy/Fall (32x32).png" type="Texture" id=6]
[ext_resource path="res://Assets/Free/Other/Shadow.png" type="Texture" id=7]
[ext_resource path="res://Sounds/jump1.ogg" type="AudioStream" id=8]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=7]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "hit"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=4]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "run"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9, 10 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 11.5, 10 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10, 2 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, -16 )
collision_mask = 94
script = ExtResource( 2 )

[node name="texture" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 11
frame = 1

[node name="Shadow" type="Sprite" parent="."]
visible = false
position = Vector2( 1, 16 )
scale = Vector2( 1, 0.25 )
texture = ExtResource( 7 )

[node name="animation" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 1 )
anims/fall = SubResource( 7 )
anims/hit = SubResource( 6 )
anims/idle = SubResource( 2 )
anims/jump = SubResource( 4 )
anims/run = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 6 )
shape = SubResource( 3 )

[node name="raycasts" type="Node2D" parent="."]
visible = false

[node name="raycast" type="RayCast2D" parent="raycasts"]
position = Vector2( 8, 10 )
enabled = true
cast_to = Vector2( 0, 12 )
collision_mask = 88

[node name="raycast2" type="RayCast2D" parent="raycasts"]
position = Vector2( -7, 10 )
enabled = true
cast_to = Vector2( 0, 12 )
collision_mask = 88

[node name="camera" type="Camera2D" parent="."]
current = true
limit_left = -32
limit_bottom = 230
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.4
drag_margin_top = 0.3
drag_margin_right = 0.4
drag_margin_bottom = 0.3
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 2

[node name="collision" type="CollisionShape2D" parent="hurtbox"]
modulate = Color( 0.909804, 0.815686, 0.447059, 1 )
position = Vector2( 0.5, 0 )
shape = SubResource( 8 )

[node name="left" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, 5 )
enabled = true
cast_to = Vector2( -16, 0 )
collision_mask = 2

[node name="right" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, 6 )
enabled = true
cast_to = Vector2( 16, 0 )
collision_mask = 2

[node name="headCollider" type="Area2D" parent="."]
visible = false
collision_mask = 16

[node name="collision" type="CollisionShape2D" parent="headCollider"]
position = Vector2( 0, -7 )
shape = SubResource( 9 )

[node name="jumpFx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -20.0

[node name="pushRight" type="RayCast2D" parent="."]
position = Vector2( 9, 9 )
cast_to = Vector2( 2, 0 )
collision_mask = 128

[node name="pushLeft" type="RayCast2D" parent="."]
position = Vector2( -8, 9 )
cast_to = Vector2( -2, 0 )
collision_mask = 128

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="headCollider" to="." method="_on_headCollider_body_entered"]
